--- a/action.yaml
+++ b/action.yaml
@@ -13,6 +13,9 @@ inputs:
     description: 'GCP Project ID'
     required: true
     default: ''
+  service_token:
+    description: 'GCP Service Token'
+    required: true
 outputs:
   version:
     description: "Version that pushed to GAR"
@@ -41,7 +44,7 @@ runs:
     - id: 'auth'
       uses: 'google-github-actions/auth@v2'
       with:
-        credentials_json: '${{ secrets.SERVICE_ACCOUNT_CREDENTIALS }}'
+        credentials_json: '${{ inputs.service_token }}'
 
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v2'
